@@ -277,19 +277,26 @@ const feeBreakdown = ( event ) => {
 						'Foreign exchange fee: %1$s%%',
 						'woocommerce-payments'
 				  ),
-		discount:
-			0 !== fixedRate
-				? __(
-						/* translators: %1$s% is the fee amount and %2$s is the fixed rate */
-						'Discount: %1$s%% + %2$s',
-						'woocommerce-payments'
-				  )
-				: __(
-						/* translators: %1$s% is the fee amount */
-						'Discount: %1$s%%',
-						'woocommerce-payments'
-				  ),
+		discount: __( 'Discount', 'woocommerce-payments' ),
 	} );
+
+	const renderDiscountSplit = (
+		percentageRateFormatted,
+		fixedRateFormatted
+	) => {
+		return (
+			<ul className="discount-split-list">
+				<li>
+					{ __( 'Variable fee: ', 'woocommerce-payments' ) }
+					{ percentageRateFormatted }%
+				</li>
+				<li>
+					{ __( 'Fixed fee: ', 'woocommerce-payments' ) }
+					{ fixedRateFormatted }
+				</li>
+			</ul>
+		);
+	};
 
 	const feeHistoryList = history.map( ( fee ) => {
 		let labelKey = fee.type;
@@ -303,13 +310,22 @@ const feeBreakdown = ( event ) => {
 			currency,
 		} = fee;
 
+		const percentageRateFormatted = formatFee( percentageRate );
+		const fixedRateFormatted = formatCurrency( fixedRate, currency );
+
 		return (
 			<li key={ labelKey }>
 				{ sprintf(
 					feeLabelMapping( fixedRate )[ labelKey ],
-					formatFee( percentageRate ),
-					formatCurrency( fixedRate, currency )
+					percentageRateFormatted,
+					fixedRateFormatted
 				) }
+
+				{ 'discount' === fee.type &&
+					renderDiscountSplit(
+						percentageRateFormatted,
+						fixedRateFormatted
+					) }
 			</li>
 		);
 	} );
